# gleanflow

./: .gitignore  README.md  pyproject.toml
awsdemo/: README.md  pipeline.py
examples/: polars_demo.py
examples/zz/: pipeline.py
gleanflow/: __init__.py  agent.py  ckpt.py  cli.py  config.py  context.py  controller.py  markers.py  monitor.py  partition.py  pipeline.py  polars.py  stage.py  store.py  task.py  tracker.py  worker.py
gleanflow/fleet/: __init__.py  base.py  batch.py  local.py
gleanflow/infra/: Dockerfile  apply.py  entrypoint.sh  main.tf.tmpl
gleanflow/queue/: __init__.py  base.py  local.py  sqs.py
gleanflow/web/: index.html  server.py
tests/: conftest.py  test_agent.py  test_events.py  test_pipeline.py  test_polars.py  test_queue.py  test_webapi.py
